--- a/style guide/style.css
+++ b/style guide/style.css
@@ -245,6 +245,7 @@
     border-color: #5062FF;
     border-style: solid;
     border-radius: 15px;
+    text-align: center;
 }
 
 .card2 {
@@ -253,6 +254,8 @@
     background-color: #5062FF;
     border-radius: 15px;
     margin: 40px 0 0 20px;
+    text-align: center;
+    color: #ffffff;
 }
 
 .card3 {
@@ -261,6 +264,7 @@
     background-color: #dbdbdb;
     border-radius: 15px;
     margin: 40px 0 0 20px;
+    text-align: center;
 }
 
 .card4 {
@@ -269,6 +273,7 @@
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
     border-radius: 15px;
     margin: 40px 0 0 20px;
+    text-align: center;
 }
 
 .card5 {
@@ -312,4 +317,217 @@
     color: black;
     border-radius: 10px;
     padding: 10px 30px;
+}
+
+.input {
+    width: 100%;
+    height: 500px;
+    padding-left: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+    font-family: 'Prompt', sans-serif;
+}
+
+.button {
+    width: 100%;
+    height: 230px;
+    padding-left: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+    font-family: 'Prompt', sans-serif;
+}
+
+.hotdog {
+    width: 100%;
+    height: 150px;
+    padding-left: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+    font-family: 'Prompt', sans-serif;
+}
+
+.select {
+    width: 100%;
+    height: 100px;
+    padding-left: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+    font-family: 'Prompt', sans-serif;
+}
+
+.input1 {
+    height: 30px;
+    width: 200px;
+    border: 3px solid #5062FF;
+    border-radius: 10px;
+}
+
+.input2 {
+    height: 30px;
+    width: 200px;
+    border: 3px solid #5062FF;
+    border-radius: 10px;
+}
+
+.input3 {
+    height: 30px;
+    width: 200px;
+    border: 3px solid #5062FF;
+    border-radius: 10px;
+}
+
+
+.form-label {
+    display: inline-block;
+    background-color: transparent;
+    border-width: 0;
+    padding: 0.2em 0.5em;
+    font: inherit;
+    color: inherit;
+    width: 100%;
+    border-bottom: 1px solid;
+    outline: 0;
+}
+
+.form-label:focus {
+    border-bottom-color: var(--color-main-light);
+}
+
+.btn1 {
+    width: 100px;
+    height: 50px;
+    background-color: #5062FF;
+    color: white;
+    font-size: large;
+    border-radius: 10px;
+    border: none;
+}
+
+.btn1:hover {
+    color: black;
+    background-color: aqua;
+}
+
+.btn2 {
+    text-align: center;
+    width: 300px;
+    height: 50px;
+    background-color: #dfdfdf;
+    color: black;
+    font-size: large;
+    border-radius: 10px;
+    border: none;
+}
+
+.btn2:active {
+    background-color: aqua;
+}
+
+.hotdog1 {
+    margin-top: 30px;
+    border-radius: 30px;
+    width: 300px;
+    height: 30px;
+    border-color: #5062FF;
+    font-family: 'Prompt', sans-serif;
+}
+
+.hotdog2 {
+    margin-top: 30px;
+    border-radius: 30px;
+    width: 150 px;
+    height: 30px;
+    background-color: rgb(160, 160, 160);
+    border-color: #5062FF;
+    font-family: 'Prompt', sans-serif;
+}
+
+label {
+    font-size: 16px;
+    margin-right: 10px;
+}
+
+select {
+    margin-top: 30px;
+    padding: 8px;
+    font-size: 14px;
+    border: 3px solid #5062FF;
+    border-radius: 4px;
+    outline: none;
+    font-family: 'Prompt', sans-serif;
+}
+
+.checkbox {
+    width: 100%;
+    height: 230px;
+    padding-left: 20px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+    font-family: 'Prompt', sans-serif;
+}
+
+.control {
+    color: #333333;
+    border-left-width: 0px !important;
+    border-right-width: 0px !important;
+    border-top-width: 0px !important;
+    border-bottom: 1px solid #333333;
+    background-color: transparent;
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+}
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+/* The slider */
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+
+input:checked+.slider {
+    background-color: #5062FF;
+}
+
+input:focus+.slider {
+    box-shadow: 0 0 1px #5062FF;
+}
+
+input:checked+.slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+/* Rounded sliders */
+.slider.round {
+    border-radius: 34px;
+}
+
+.slider.round:before {
+    border-radius: 50%;
 }
