--- a/style guide/style.css
+++ b/style guide/style.css
@@ -1,6 +1,6 @@
 .outline {
     width: 100%;
-    height: 370px;
+    height: 420px;
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
     font-family: 'Prompt', sans-serif;
 }
@@ -13,10 +13,6 @@
 .outline h3 {
     margin-left: 20px;
     font-family: 'Prompt', sans-serif;
-}
-
-.color ul {
-    list-style: none;
 }
 
 .colorbox1 {
@@ -36,6 +32,7 @@
     border-radius: 15px;
     border-color: #333333;
     border-style: solid;
+    margin-top: 30px;
 }
 
 .colorbox3 {
@@ -46,6 +43,7 @@
     height: 150px;
     background-color: #333333;
     border-radius: 15px;
+    margin-top: 30px;
 }
 
 .color {
@@ -54,6 +52,16 @@
     height: 370px;
     box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
     font-family: 'Prompt', sans-serif;
+}
+
+.icon {
+    padding-top: 30px;
+    width: 100%;
+    height: 200px;
+    box-shadow: 3px 3px 3px 3px rgba(0, 0, 0, 0.15);
+    font-family: 'Prompt', sans-serif;
+    background-image: url(icon.png);
+    background-repeat: no-repeat;
 }
 
 .textsize {
@@ -136,9 +144,10 @@
     height: 350px;
     padding-left: 20px;
     font-family: 'Prompt', sans-serif;
+    display: flex;
 }
 
-.figure ul {
+.gameshow {
     list-style: none;
     display: flex;
     justify-content: center;
